# openct

./: .gitignore  .pylintrc  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  pylint.yml  pytest.yml  python-publish.yml
config/: config.yml  devices.yml
openct/: __init__.py  __main__.py  backup.py  config_loader.py  logging_init.py
openct/config/: __init__.py  __main__.py  config.py  config_schema.py
openct/connections/: __init__.py  connections.py
openct/daemon/: __init__.py  daemon.py
openct/datastore/: __init__.py  datastore.py
openct/devices/: __init__.py  devices.py
openct/setup/: __init__.py  __main__.py  config.py  config_schema.py  setup.py
tests/: test_datastore.py
tests/data/: test_datastore_001.yml
